# figure_crawler

./: .editorconfig  .env  .gitignore  .gitmodules  DockerFile  DockerFile.celery  DockerFile.flask  DockerFile.scrapy  DockerFile.scrapyd  Dockerfile  Dockerfile.flask  Dockerfile.scrapyd  alembic.ini  conftest.py  db.env  deploy.dockerfile  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  figure_note.md  pyproject.toml  requirements-celery.txt  requirements-deploy.txt  requirements-scrapy.txt  requirements-top.txt  requirements.production.txt  requirements.txt  sample.env  setup.cfg  try.py  wsgi.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: pytest.yml
.sh/: babel_compile.sh  babel_init.sh  babel_update.sh  celery_start.sh  extract_pot.sh  flask_start.sh  load_envfile.sh  load_libs.sh  python_init.sh  scrapy_deploy.sh  scrapyd.sh  scrapyd_init.sh  scrapyd_start.sh
DetailClass/: __init__.py
Parser/: __init__.py  gsc.py
Parsers/: __init__.py  _product_parser.py  alter_parser.py  announcement_parser.py  base_product_parser.py  gsc_parser.py  product_parser.py
Parsers/gsc/: __init__.py  (+2 more)
Products/: __init__.py  base_product.py  gsc_product.py  products.py
Services/celery/: setup.cfg  setup.py
Services/celery/basic_task/: celery.py  tasks.py
app/: app.py  config.py  extension.py  forms.py
crawler/: proxy-list.txt  scrapy.cfg
figure_hook/: database.py  exceptions.py  extension_class.py
flags/: 503.html  maintenance.off
libs/figure_parser/: setup.cfg  setup.py
libs/figure_parser/src/figure_parser/: abcs.py  constants.py  extension_class.py  factory.py  product.py  utils.py
libs/figure_parser/src/figure_parser/alter/: product_parser.py
libs/figure_parser/src/figure_parser/gsc/: product_parser.py  release_info.py
libs/figure_parser/src/figure_parser/native/: __init__.py  announcement_parser.py  product_parser.py
libs/figure_parser/src/parsers/: __init__.py
libs/figure_parser/tests/: test_custom_class.py  test_product.py  test_product_factory.py  test_utils.py
libs/figure_parser/tests/test_parser/: test_product_parser.py
libs/figure_parser/tests/test_parser/test_case/: alter_products.yml  gsc_products.yml  native_products.yml  templates.yml
src/: .env  README.md  custom_classes.py  database.py  extension.py  wsgi.py
test/: test_checker.py  test_parser.py  test_product.py  test_response.py
tests/: .env  conftest.py  test_checker.py  test_model.py  test_parser.py  test_product.py  test_product_factory.py  test_utils.py
utils/: __init__.py  checker.py  db_fake_data.py  text_parser.py
(+295 files in other folders)
