[metadata]
name = figure_hook
version = 0.0.1
author = Elton H.Y. Chou
author_email = plscd748@gmail.com
description = figure_hook

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    requests >= 2.25.1
    discord.py>=1.7.2
    Babel >= 2.9.1
    sqlalchemy_mixins >= 1.3
    psycopg2-binary >= 2.8.6
    SQLAlchemy >= 1.4.1

[options.packages.find]
where = src

[flake8]
count = true
exit-zero = true
statistics = true
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,build,
    dist,
    db/*,
    /usr/local/*
max-complexity = 10
max-line-length = 127

[tool:pytest]
junit_family=xunit2
addopts = -ra -q
testpaths =
    tests
    libs/figure_parser/tests

[mypy]
plugins = sqlalchemy.ext.mypy.plugin

[coverage:report]
exclude_lines =
    pragma: no cover
    @abstract
