[metadata]
name = basic_task
version = 0.0.1
author = Elton H.Y. Chou
author_email = plscd748@gmail.com
description = celery tasks

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6
install_requires =
    celery
    discord.py
    SQLAlchemy

[options.packages.find]
where = .