[metadata]
name = figure_parser
version = 0.0.1
author = Elton H.Y. Chou
author_email = plscd748@gmail.com
description = Parser for figure

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
include_package_data = True
install_requires =
    beautifulsoup4 >= 4.9.3
    lxml >= 4.6.3
    requests >= 2.25.1
    PyYAML >= 5.4.1
    feedparser >= 6.0.2
    aiohttp

[options.packages.find]
where = src

[options.package_data]
* =
    *.yml